--- a/index.html
+++ b/index.html
@@ -1,23 +1,61 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Quiz App</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registration</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <script defer src="register.js"></script>
+  </head>
 
-<body>
-    <h1>Quiz App</h1>
-    <form id="form">
-        <input type="text" id="full-name" placeholder="Enter your name"><br><br>
-        <input type="email" id="email" placeholder="Enter Your Email"> <br><br>
-        <input type="password" id="password" placeholder="Enter Your Password"> <br><br>
-        <button onsubmit="click()" id="submit">Login</button> <br><br>
-        <a href="register.html">Don't have an account. Sign up</a>
-    </form>
+  <body>
+    <style>
+      .input-container {
+        position: relative;
+        margin-bottom: 15px;
+      }
+      .input-container input {
+        width: 100%;
+        padding: 10px 10px 10px 40px;
+        box-sizing: border-box;
+      }
+      .input-container .fa {
+        position: absolute;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    </style>
 
-
-    <script src="app.js"></script>
-</body>
+    <div class="container">
+      <div id="registration" class="form-container active">
+        <h2>Register yourself</h2>
+        <form id="registerForm">
+          <div class="input-container">
+            <i class="fa fa-user"></i>
+            <input type="text" id="fullName" placeholder="Full Name" required />
+          </div>
+          <div class="input-container">
+            <i class="fa fa-envelope"></i>
+            <input type="email" id="email" placeholder="Email" required />
+          </div>
+          <div class="input-container">
+            <i class="fa fa-lock"></i>
+            <input
+              type="password"
+              id="password"
+              placeholder="Password"
+              required
+            />
+          </div>
+          <button type="submit">Register</button>
+        </form>
+        <p><a href="login.html">Already registered? Login here</a></p>
+      </div>
+    </div>
+  </body>
 </html>
